# zensai-tasks

./: README.md  TASKS.md
backend/: .gitignore  db.sqlite3  manage.py  pyproject.toml
backend/templates/: home.html
backend/todos/: models.py  schema.py  tests.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py
backend/zensai/: settings.py  urls.py  wsgi.py
frontend/: .gitignore  jest.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  api.js
frontend/src/__mocks__/: axios.js
frontend/src/components/: TodoItem.js  TodoList.js
